@@ -118,12 +118,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-  *) mod_macro: fix usability of globally defined macros in .htaccess files.
-                PR 57525.
-     trunk patch: http://svn.apache.org/r1813643
-     2.4.x patch: trunk works (modulo CHANGES)
-                  svn merge -c 1813643 ^/httpd/httpd/trunk .
-     +1: ylavic, icing, jim
 
 
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
